# python-ddd-typed

./: .gitignore  README.md  compose.yml  docker-compose.yml  pyproject.toml  pytest.ini
patterns/creational/: singleton.py
src/: asgi.py  conftest.py  main.py
src/core/application/protocols/: use_case_protocol.py
src/core/domain/protocols/: config_protocol.py  domain_event_protocol.py  entity_protocol.py  repository_protocol.py  value_object_protocol.py
src/core/infra/config/: config_pydantic.py
src/core/infra/database/: database_adapter.py  database_connect.py  mongo_database.py
src/core/infra/repositories/: generic_repository_in_memory.py
src/core/infra/schemas/: user_schema.py
src/modules/user/: dto.py  module.py  providers.py  routes.py
src/modules/user/application/: create_customer_use_case.py  delete_user_use_case.py  get_user_use_case.py  list_users_use_case.py  signin_user_use_case.py  update_user_use_case.py
src/modules/user/application/__test__/: test_create_customer_use_case.py  test_signin_user_use_case.py  test_update_user_use_case.py  test_update_user_use_case.py~
src/modules/user/application/events/: created_user_event_handler.py
src/modules/user/controllers/: routes.py
src/modules/user/domain/: test_user.py  user.py
src/modules/user/domain/__test__/: test_user.py
src/modules/user/domain/entities/: user.py
src/modules/user/domain/events/: created_user_domain_event.py
src/modules/user/domain/services/: jwt_service_protocol.py
src/modules/user/domain/value_objects/: password_vo.py
src/modules/user/infra/jwt/: jwt_service.py  test_jwt_service.py
src/modules/user/repositories/: user_repository_in_memory.py  user_repository_mongo.py  user_repository_protocol.py
src/modules/user/repositories/__test__/: test_user_repository_in_memory.py  test_user_repository_mongo.py
