[project]
name = "python-interview"
version = "0.1.0"
description = "Domain-Driven Design and Clean Architecture in Python"
authors = [{ name = "John Faria", email = "johnwbf@hotmail.com" }]
dependencies = [
    "pydantic>=2.11.3",
    "pytest-asyncio>=0.26.0",
    "beanie>=1.29.0",
    "motor>=3.7.0",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "fastapi[standard]>=0.115.12",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "ruff>=0.11.7",
    "pytest>=8.3.5",
    "jedi>=0.19.2",
    "mypy>=1.15.0",
    "testcontainers>=4.10.0",
    "vulture>=2.14",
    "pytest-xdist>=3.6.1",
    "pytest-env>=1.1.5",
    "debugpy>=1.8.14",
    "pre-commit>=4.2.0",
]

[tool.pdm.scripts]
start = "uvicorn src.asgi:asgi_app --host 0.0.0.0 --port 8000 --workers 4 --log-level info"
dev = "fastapi dev src/main.py --host 0.0.0.0 --port 8000 --reload"
lint = "ruff check src"
format = "ruff format src"
test = "pytest"
vulture = "vulture src"
precommit = "pre-commit install"

[tool.mypy]
python_version = "3.13"
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "modules.*"
implicit_reexport = true

[tool.basedpyright]
typeCheckingMode = "recommended"
pythonVersion = "3.13"
include = ["src"]
stubPath = "src"
extraPaths = ["src"]
